WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135264
Crash when measuring a glyphs from a fallback SVG font
https://bugs.webkit.org/show_bug.cgi?id=135264
Summary
Crash when measuring a glyphs from a fallback SVG font
Myles C. Maxfield
Reported
2014-07-24 16:02:24 PDT
Crash when measuring a glyphs from a fallback SVG font
Attachments
Patch
(5.14 KB, patch)
2014-07-24 17:10 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-07-24 17:10:39 PDT
Created
attachment 235476
[details]
Patch
Myles C. Maxfield
Comment 2
2014-07-24 17:13:03 PDT
<
rdar://problem/16591706
>
Simon Fraser (smfr)
Comment 3
2014-07-24 17:13:54 PDT
Comment on
attachment 235476
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235476&action=review
> Source/WebCore/platform/graphics/WidthIterator.cpp:127 > + if (iterator.run().renderingContext() && typesettingFeatures & Kerning) {
Minor preference for parens around (typesettingFeatures & Kerning)
> Source/WebCore/platform/graphics/WidthIterator.cpp:129 > + // However, doing the above FIXME seems like questionable design. Perhaps a larger refactoring of SVG fonts is necessary.
Odd comment in this context. Just reword the FIXME.
Myles C. Maxfield
Comment 4
2014-07-24 17:29:51 PDT
https://trac.webkit.org/r171561
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug