Crash when measuring a glyphs from a fallback SVG font https://bugs.webkit.org/show_bug.cgi?id=135264

Reviewed by Simon Fraser.

Source/WebCore:
We can't realize font data for all fallback fonts ahead
of time, but we don't have all the necessary context to
realize SVG fallback data when it's needed. For now, we
can just bail; however, a larger, more invasive fix is
in order.

Test: svg/text/svg-fallback-font-crash.html

* platform/graphics/WidthIterator.cpp:
(WebCore::applyFontTransforms):

LayoutTests:
Render some text with a fallback SVG Font including a glyph which
only exists in that fallback font. Make sure there is no crash.

* svg/text/resources/Litherum.svg:
* svg/text/svg-fallback-font-crash-expected.txt: Added.
* svg/text/svg-fallback-font-crash.html: Added.

Canonical link: https://commits.webkit.org/153166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171561 268f45cc-cd09-0410-ab3c-d52691b4dbfc